FEAT: Package files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
         "moduleResolution": "nodenext",
         "module": "nodenext",
         "strict": true,
-        "noImplicitAny": true,
         "strictNullChecks": true,
         "declaration": true,
+        "skipLibCheck": true,
         "outDir": "dist",
         "rootDir": "src",
         "allowJs": true,
