--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "version": "0.0.1",
-    "description": "Allows to create custom logic when extending plugins",
     "name": "strapi-extensions-custom-logic",
+    "description": "Allows to load plugins extended custom logic just like creating a normal API logic",
     "keywords": [
         "strapi",
         "plugin",
@@ -18,6 +18,9 @@
         "pack": "npm run build && npm pack",
         "publish": "npm run build && npm publish"
     },
+    "bin": {
+        "cli": "./scripts/cli.js"
+    },
     "repository": {
         "type": "git",
         "url": "git+ssh://git@github.com/RigthCO/strapi-extensions-custom-logic.git"
@@ -29,7 +32,7 @@
     "license": "MIT",
     "author": "Bruno RightCO <bruno.ascencao@rightco.pt>",
     "peerDependencies": {
-        "@strapi/strapi": "^5.30.0"
+        "@strapi/strapi": "^5.10.0"
     },
     "devDependencies": {
         "typescript": "^5.9.3"
